[tool.poetry]
name = "tms-toolbox"
version = "0.1.0"
description = "A collection of utilities and toy models to experiment with superposition"
authors = ["Hoang Tran <descience.thh10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.40"
mkdocstrings = "^0.26.2"
pygments = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
